--- a/fortfolio.html
+++ b/fortfolio.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="fortfolio.css">
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Fortfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="fortfolio.css">
 </head>
 <body>
+    <section class="style">
+    <div class="half">
+        <h1 class="good">Welcome TO</h1>
+        <h1 class="bad"> <span class="hhh">Mushfiqul Islam</span> World</h1>
+        <h3>MY FIRST PORTFOLIO WEBSITE</h3>
+        <P>At its most basic form, a portfolio website provides professional information about an individual or a company and presents a showcase of their work. ... To supply site visitors with information about the individual or company. To showcase work</P>
+        <a class="linking" target="blank" href="https://www.facebook.com/profile.php?id=100013654427362&sk=about">Hire Me</a>
+    </div>
+
+    <div class="half">
+        <img src="my-bg2.png" alt="me">
+    </div>
+   </section>
+   
+  
     
+  
 </body>
 </html>
